--- a/elwikijsp.root/bundles/org.elwiki.main/src/org/apache/wiki/tasks/package.html
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/org/apache/wiki/tasks/package.html
@@ -25,7 +25,7 @@ Provides specific tasks for JSPWiki, meant to be executed by the workflow framew
 <p>This package contains JSPWiki specific tasks which are executed by the workflow framework.</p>
 
 <p>Instances of this tasks are assumed to have been added to an approval workflow via
- {@link org.apache.wiki.workflow.WorkflowBuilder#buildApprovalWorkflow(Principal, String, Task, String, org.apache.wiki.workflow.Fact[], Task, String)};
+ {@link org.apache.wiki.workflow.WorkflowBuilder#buildApprovalWorkflow(Principal, String, Task, String, List, Task, String)};
  they will not function correctly otherwise.</p>
 
 </body>
