cookies are renamed.

--- a/elwikijsp.root/bundles/org.elwiki.api/src/org/elwiki/authorize/login/package.html
+++ b/elwikijsp.root/bundles/org.elwiki.api/src/org/elwiki/authorize/login/package.html
@@ -20,7 +20,7 @@
 
 <body>
 
-Provides the different login modules that JSPWiki uses.
+Provides the different login modules that ElWiki uses.
 
 <h3>Package Specification</h3>
 
