--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/src/org/elwiki/authorize/login/package.html
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/src/org/elwiki/authorize/login/package.html
@@ -20,7 +20,7 @@
 
 <body>
 
-Provides the different login modules that JSPWiki uses.
+Provides the different login modules that ElWiki uses.
 
 <h3>Package Specification</h3>
 
